SERVER-26267 forbid creating views starting with 'system.'